Feature smooth scroll

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
 
     <!-- What you see in the page -->
-    <div class="page">
+    <div class="page" asscroll-container>
       <!-- Light/Dark mode -->
       <div class="toggle-bar">
         <div class="sun-wrapper">
@@ -35,7 +35,7 @@
         </div>
       </div>
       <!-- All its content -->
-      <div class="page-wrapper">
+      <div class="page-wrapper" asscroll>
         <!-- Hero -->
         <section class="hero">
           <div class="hero-wrapper">
@@ -98,10 +98,6 @@
         <div class="section-margin second-move"></div>
         <!-- Second Section -->
         <section class="second-section section right">
-          <!-- Progress Bar -->
-          <div class="progress-bar-wrapper-right">
-            <div class="right-progress-bar purple-background"></div>
-          </div>
           <!-- Title -->
           <div class="section-intro-wrapper purple-text purple-border">
             <h1 class="section-title purple-text purple-border">
@@ -148,10 +144,6 @@
         <div class="section-margin third-move"></div>
         <!-- First Section -->
         <section class="third-section section left">
-          <!-- Progress Bar -->
-          <div class="progress-bar-wrapper-left">
-            <div class="left-progress-bar green-background"></div>
-          </div>
           <!-- Title -->
           <div class="section-intro-wrapper green-text green-border">
             <h1 class="section-title green-text green-border">
