Add animated class

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Agustin Erhardt</title>
   </head>
   <body class="light-theme">
     <div class="experience">
@@ -39,6 +39,7 @@
         <!-- Hero -->
         <section class="hero">
           <div class="hero-wrapper">
+            <div class="intro-text">Welcome to my Portfolio</div>
             <!-- Bottom Left part -->
             <div class="hero-main">
               <h1 class="hero-main-title">Agustin Erhardt</h1>
