--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Agustin Erhardt</title>
   </head>
   <body class="light-theme">
     <div class="experience">
       <canvas class="experience-canvas"></canvas>
+    </div>
+
+    <!-- Preloader -->
+    <div class="preloader">
+      <div class="preloader-wrapper">
+        <div class="loading">
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </div>
     </div>
 
     <!-- What you see in the page -->
@@ -39,6 +51,15 @@
         <!-- Hero -->
         <section class="hero">
           <div class="hero-wrapper">
+            <!-- Intro -->
+            <div class="arrow-wrapper">
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                <path
+                  fill="currentColor"
+                  d="m11.3 14.3-2.6-2.6q-.475-.475-.212-1.087Q8.75 10 9.425 10h5.15q.675 0 .937.613.263.612-.212 1.087l-2.6 2.6q-.15.15-.325.225-.175.075-.375.075t-.375-.075q-.175-.075-.325-.225Z"
+                />
+              </svg>
+            </div>
             <div class="intro-text">Welcome to my Portfolio</div>
             <!-- Bottom Left part -->
             <div class="hero-main">
